--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     padding: 0;
     margin: 0;
     height: 100vh;
-    background-image: url('/Design/téléchargement\ \(9\).png');
+    background-image: url('Design/Backrounde.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
